--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <artifactId>shiro-spring</artifactId>
             <version>1.4.0</version>
         </dependency>
+        <!-- Redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-redis</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>
         <!-- Swagger API文档 -->
         <dependency>
             <groupId>io.springfox</groupId>
