--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,9 +24,10 @@ spring.redis.password=
 # 连接超时时间（毫秒）
 spring.redis.timeout=10000
 
-# Thymeleaf模版
-spring.thymeleaf.mode=LEGACYHTML5
-spring.thymeleaf.cache=false
+spring.http.multipart.maxFileSize=5Mb
+spring.http.multipart.maxRequestSize=5Mb
+
+custom.location=/Users/administrator/upload/tmp/
 
 # 日志
 # 检查终端是否支持ANSI（是将采用彩色输出）
