--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8888
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://118.24.151.93:3306/rent?characterEncoding=utf-8
 spring.datasource.username=xhy
-spring.datasource.password=123456xhy
+spring.datasource.password=123456.xhy
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 spring.jpa.generate-ddl=false
