--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-# ·şÎñ¶Ë¿Ú
+# æœåŠ¡ç«¯å£
 server.port=8888
 
-# Êı¾İ¿â
+# æ•°æ®åº“
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://118.24.151.93:3306/rent?characterEncoding=utf-8
-spring.datasource.username=xhy
-spring.datasource.password=123456.xhy
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/rent?characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 spring.jpa.generate-ddl=false
@@ -13,20 +13,20 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 
 # Redis
-# RedisÊı¾İ¿âË÷Òı£¨Ä¬ÈÏÎª0£©
+# Redisæ•°æ®åº“ç´¢å¼•ï¼ˆé»˜è®¤ä¸º0ï¼‰
 spring.redis.database=0
-# Redis·şÎñÆ÷µØÖ·
+# RedisæœåŠ¡å™¨åœ°å€
 spring.redis.host=127.0.0.1
-# Redis·şÎñÆ÷Á¬½Ó¶Ë¿Ú
+# RedisæœåŠ¡å™¨è¿æ¥ç«¯å£
 spring.redis.port=6379
-# Redis·şÎñÆ÷Á¬½ÓÃÜÂë£¨Ä¬ÈÏÎª¿Õ£©
+# RedisæœåŠ¡å™¨è¿æ¥å¯†ç ï¼ˆé»˜è®¤ä¸ºç©ºï¼‰
 spring.redis.password=
-# Á¬½Ó³¬Ê±Ê±¼ä£¨ºÁÃë£©
+# è¿æ¥è¶…æ—¶æ—¶é—´ï¼ˆæ¯«ç§’ï¼‰
 spring.redis.timeout=10000
 
 spring.http.multipart.maxFileSize=5Mb
 spring.http.multipart.maxRequestSize=5Mb
 
-# ÈÕÖ¾
-# ¼ì²éÖÕ¶ËÊÇ·ñÖ§³ÖANSI£¨ÊÇ½«²ÉÓÃ²ÊÉ«Êä³ö£©
+# æ—¥å¿—
+# æ£€æŸ¥ç»ˆç«¯æ˜¯å¦æ”¯æŒANSIï¼ˆæ˜¯å°†é‡‡ç”¨å½©è‰²è¾“å‡ºï¼‰
 spring.output.ansi.enabled=DETECT
